--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
+          
+      - name: Install dependencies
+        run: npm ci
 
-      - name: Force Failure
-        run: node --version
+      - name: Run tests
+        run: npm run test
