--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,5 +24,10 @@ jobs:
       - name: Run tests
         run: npm run test -- --coverage
 
+  style:
+    name: Style
+    runs-on: ubuntu-latest
+
+    steps:
       - name: Style
         run: npm run format:check
